--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,21 @@
             margin: 0;
         }
     </style>
+    <link rel="stylesheet" href="./blocks/theme/theme.css">
+    <link rel="stylesheet" href="./blocks/layout/layout.css">
+    <link rel="stylesheet" href="./blocks/text/text.css">
+    <link rel="stylesheet" href="./blocks/payment/payment.css">
 </head>
 
 <body>
-    <div class="theme">
-        test
+    <div class="layout layout__container_size_m">
+        <div class="theme_color_project-default">
+            <div class="theme_space_default_xl payment">
+                <div
+                    class="theme_size_default_xxl text text_size_xxl text_type_h1 text__word_width_l text_view_primary">
+                </div>
+            </div>
+        </div>
     </div>
     <script>
 
